--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,11 @@ authors = ["Grant Billings"]
 version = "1.0.0-DEV"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
+StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+SuffixArrays = "24f65c1e-0a10-5d3d-8a1f-a83399f3fced"
 
 [compat]
 julia = "1"
