--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "1.0.0-DEV"
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 SuffixArrays = "24f65c1e-0a10-5d3d-8a1f-a83399f3fced"
