--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ RawArray = "d3d335b2-f152-507c-820e-958e337efb65"
 StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 SuffixArrays = "24f65c1e-0a10-5d3d-8a1f-a83399f3fced"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
 julia = "1"
