--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,15 @@ SuffixArrays = "24f65c1e-0a10-5d3d-8a1f-a83399f3fced"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
+BenchmarkTools = "1"
+DelimitedFiles = "1"
+JET = "0.8"
+LoopVectorization = "0.12"
+PProf = "2"
+RawArray = "0.1"
+StatProfilerHTML = "1"
+StatsBase = "0.34"
+SuffixArrays = "1"
 TimerOutputs = "0.5"
 julia = "1"
 
