add ProfileCanvas to Project.toml

--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
+ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RawArray = "d3d335b2-f152-507c-820e-958e337efb65"
 StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
