CompatHelper: add new compat entry for ProfileCanvas at version 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ DelimitedFiles = "1"
 JET = "0.8"
 LoopVectorization = "0.12"
 PProf = "2"
+ProfileCanvas = "0.1"
 RawArray = "0.1"
 StatProfilerHTML = "1"
 StatsBase = "0.34"
