--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ BenchmarkTools = "1"
 DelimitedFiles = "1"
 JET = "0.8"
 LoopVectorization = "0.12"
-PProf = "2"
+PProf = "2, 3"
 ProfileCanvas = "0.1"
 RawArray = "0.1"
 StatProfilerHTML = "1"
