--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 [compat]
 BenchmarkTools = "1"
 DelimitedFiles = "1"
-JET = "0.8"
+JET = "0.8, 0.9"
 LoopVectorization = "0.12"
 PProf = "2"
 ProfileCanvas = "0.1"
